typo fix and adding links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
  <p></p>
  <p>if you look at the last object in the console log (specialPie) you will see it has three properies with values and another object called __proto__ and it has a bunch of built in methods.</p>
  <p></p>
- <p>let's create another pie objects</p>
+ <p>let's create another pie object</p>
  <code>let extraSpecialPie = {}</code>
  <p></p>
  <p>instead of using call or apply let's use the handy setPrototypeOf method</p>
